# remote_controller

./: readme.md
client/: index.html  script.js  styles.css
client/src/: Main.elm
pc_server/: Cargo.toml  Rocket.toml
pc_server/src/: main.rs
pi_server/: Cargo.toml  Rocket.toml
pi_server/src/: command.rs  main.rs
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
