[package]
name = "remote_controller"
version = "0.1.0"
authors = ["tsrapnik <yannick-peeters@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
system_shutdown = "3.0.0"
open = "1.4.0"
wakey = "0.1.2"
ureq = { version = "2.0.1", features = ["json"] }