[package]
name = "remote_controller"
version = "0.1.0"
authors = ["tsrapnik <yannick-peeters@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.61"
wakey = "0.1.2"
ureq = { version = "2.0.1", features = ["json"] }